[package]
name = "nnsdk"
version = "0.5.0"
authors = ["jam1garner <jam@jam1.re>"]
edition = "2018"
license = "MIT"
description = "Cleanroom reverse-engineered bindings for nnsdk (Nintendo Switch SDK)"
documentation = "https://docs.rs/nnsdk"

[dependencies]
libc-nnsdk = { git = "https://github.com/Raytwo/libc-nnsdk", branch="core" }

[features]
rustc-dep-of-std = [
    "libc-nnsdk/rustc-dep-of-std",
]
