[package]
name = "nnsdk"
version = "0.5.0"
authors = ["jam1garner <jam@jam1.re>"]
edition = "2018"
license = "MIT"
description = "Cleanroom reverse-engineered bindings for nnsdk (Nintendo Switch SDK)"
documentation = "https://docs.rs/nnsdk"

[dependencies]
libc-nnsdk = "0.5.0"
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
rustc-dep-of-std = [
    "libc-nnsdk/rustc-dep-of-std",
    "core",
    "alloc"
]
